@@ -64,7 +64,7 @@ variations of each architecture known as <quote>flavors</quote>.
 
 <row>
   <entry morerows="3">ARM and StrongARM</entry>
-  <entry morerows="3">arm</entry>
+  <entry morerows="2">arm</entry>
   <entry>Netwinder and CATS</entry>
   <entry>netwinder</entry>
 </row><row>
@@ -73,9 +73,6 @@ variations of each architecture known as <quote>flavors</quote>.
 </row><row>
   <entry>Intel IXP4xx</entry>
   <entry>ixp4xx</entry>
-</row><row>
-  <entry>RiscPC</entry>
-  <entry>rpc</entry>
 </row>
 
 <row>
