@@ -77,7 +77,6 @@ console, see the <ulink url="&url-srm-howto;">SRM HOWTO</ulink>.
 </para><para arch="arm">
 
 IDE/ATAPI CD-ROMs are supported on all ARM machines.
-On RiscPCs, SCSI CD-ROMs are also supported.
 
 </para><para arch="mips">
 
