@@ -70,23 +70,6 @@ url="&url-arm-cyrius-nslu2;">installation instructions</ulink>.
 </para></listitem>
 </varlistentry>
 
-<varlistentry>
-<term>RiscPC</term>
-<listitem><para>
-
-This machine is the oldest supported hardware but support for it in
-our new installer is incomplete.
-It has RISC OS in ROM, Linux can be booted from that OS using
-linloader. The RiscPC has a modular CPU card and typically has a 30MHz
-610, 40MHz 710 or 233MHz Strongarm 110 CPU fitted. The mainboard has
-integrated IDE, SVGA video, parallel port, single serial port, PS/2
-keyboard and proprietary mouse port. The proprietary module expansion
-bus allows for up to eight expansion cards to be fitted depending on
-configuration, several of these modules have Linux drivers.
-
-</para></listitem>
-</varlistentry>
-
 </variablelist>
 
 </para>
