@@ -2,19 +2,6 @@
 <!-- $Id$ -->
 
 
-   <sect3 arch="arm" id="riscpc-install-files">
-   <title>RiscPC Installation Files</title>
-<para>
-
-The RiscPC installer is booted initially from RISC OS.  All the
-necessary files are provided in one Zip archive, &rpc-install-kit;.
-Download this file onto the RISC OS machine, copy the
-<filename>linloader.!Boot</filename> components into place, and run
-<filename>!dInstall</filename>.
-
-</para>
-   </sect3>
-
    <sect3 arch="arm" id="netwinder-install-files">
    <title>Netwinder Installation Files</title>
 <para>
