@@ -1,6 +1,8 @@
 installation-guide (2007xxxx) UNRELEASED; urgency=low
 
-  * 
+  [ Martin Michlmayr ]
+  * Remove all information about RiscPC because these machines are
+    no longer supported.
 
  -- Frans Pop <fjp@debian.org>  Mon, 19 Mar 2007 20:38:37 +0100
 
